[gd_scene load_steps=3 format=3 uid="uid://zen_play_state"]

[ext_resource type="Script" path="res://scripts/states/zen_play_state.gd" id="1_script"]
[ext_resource type="FontFile" path="res://assets/fonts/EurostileBold.tres" id="2_font"]

[node name="ZenPlayState" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_script")

[node name="TextContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HUD" type="CanvasLayer" parent="."]
layer = 10

[node name="TitleLabel" type="Label" parent="HUD"]
offset_left = 20.0
offset_top = 15.0
offset_right = 800.0
offset_bottom = 45.0
theme_override_colors/font_color = Color(0.5, 0.55, 0.6, 0.6)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.5)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 16
text = "Werk â€” Autor"

[node name="PauseOverlay" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="ColorRect" parent="PauseOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.02, 0.03, 0.05, 0.85)

[node name="CenterContainer" type="CenterContainer" parent="PauseOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="PauseOverlay/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="PauseTitle" type="Label" parent="PauseOverlay/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.69, 0, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 48
text = "PAUSED"
horizontal_alignment = 1

[node name="ResumePrompt" type="Label" parent="PauseOverlay/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.9, 1, 1)
theme_override_font_sizes/font_size = 24
text = "RESUME"
horizontal_alignment = 1

[node name="QuitPrompt" type="Label" parent="PauseOverlay/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.16, 0.54, 1)
theme_override_font_sizes/font_size = 24
text = "QUIT"
horizontal_alignment = 1

[node name="TypedDisplay" type="Label" parent="PauseOverlay/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.49, 1, 0, 1)
theme_override_font_sizes/font_size = 32
text = ""
horizontal_alignment = 1

[node name="SaveInfo" type="Label" parent="PauseOverlay/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.55, 0.6, 1)
theme_override_font_sizes/font_size = 14
text = "Progress is automatically saved"
horizontal_alignment = 1

[node name="StatsLabel" type="Label" parent="PauseOverlay/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.45, 0.45, 0.5, 1)
theme_override_font_sizes/font_size = 14
text = ""
horizontal_alignment = 1
